Adicionando conteúdo na home

--- a/index.html
+++ b/index.html
@@ -1,11 +1,262 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
-    <h1>Teste de Migração</h1>
-</body>
+<!doctype html>
+<html lang="pt-BR">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
+    <!-- Meta Tags Essenciais para SEO -->
+    <title>
+      Isa Gardênia | QA e Acessibilidade Digital - Testes, WCAG e Inclusão
+    </title>
+    <meta
+      name="description"
+      content="Aprenda QA e Acessibilidade que geram impacto real. Guias técnicos sobre testes, padrões WCAG e construção de produtos inclusivos."
+    />
+    <meta
+      name="keywords"
+      content="QA, Quality Assurance, Acessibilidade Digital, WCAG, Testes Automatizados, Cypress, Playwright, NVDA, Inclusão Digital, A11y, Shift-left Testing"
+    />
+    <meta name="author" content="Isa Gardênia" />
+    <meta name="robots" content="index, follow" />
+
+    <!-- Open Graph / Facebook / LinkedIn / WhatsApp -->
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://isagardenia.github.io/" />
+    <meta
+      property="og:title"
+      content="Isa Gardênia | Engenharia de Qualidade & Acessibilidade Digital"
+    />
+    <meta
+      property="og:description"
+      content="Aprenda QA e Acessibilidade que geram impacto real. Guias técnicos sobre testes, padrões WCAG e construção de produtos inclusivos."
+    />
+    <meta
+      property="og:image"
+      content="https://isagardenia.github.io/assets/og-image.jpg"
+    />
+    <meta property="og:image:width" content="1200" />
+    <meta property="og:image:height" content="630" />
+    <meta
+      property="og:image:alt"
+      content="Isa Gardênia - Engenharia de Qualidade e Acessibilidade Digital"
+    />
+    <meta property="og:locale" content="pt_BR" />
+
+    <!-- Canonical URL -->
+    <link rel="canonical" href="https://isagardenia.github.io/" />
+
+    <!-- Schema.org Structured Data -->
+    <script type="application/ld+json">
+      {
+        "@context": "https://schema.org",
+        "@type": "Person",
+        "name": "Isa Gardênia",
+        "url": "https://isagardenia.github.io/",
+        "jobTitle": "Quality Assurance Engineer & Digital Accessibility Specialist",
+        "description": "Engenheira de Qualidade especializada em Acessibilidade Digital, testes automatizados e padrões WCAG",
+        "sameAs": ["https://linkedin.com/in/isagardenia"],
+        "knowsAbout": [
+          "Quality Assurance",
+          "Web Accessibility",
+          "WCAG",
+          "Automated Testing",
+          "Cypress",
+          "Playwright",
+          "Screen Readers"
+        ]
+      }
+    </script>
+  </head>
+  <body>
+    <header>
+      <h1>
+        Isa Gardênia | Engenharia de Qualidade & Acessibilidade Digital 🚀
+      </h1>
+
+      <blockquote>
+        <p>
+          "A tecnologia deve derrubar barreiras, não criá-las. Meu trabalho é
+          garantir que a porta esteja aberta para todos."
+        </p>
+      </blockquote>
+
+      <div role="img" aria-label="Badges de especialização">
+        <img
+          src="https://img.shields.io/badge/Acessibilidade-WCAG%202.1%20%2F%202.2-blue"
+          alt="Badge Acessibilidade: WCAG 2.1 e 2.2"
+        />
+        <img
+          src="https://img.shields.io/badge/QA-Engenharia%20de%20Qualidade-green"
+          alt="Badge QA: Engenharia de Qualidade"
+        />
+        <img
+          src="https://img.shields.io/badge/Inclus%C3%A3o-Digital-yellow"
+          alt="Badge: Inclusão Digital"
+        />
+      </div>
+    </header>
+
+    <hr />
+
+    <main>
+      <section aria-labelledby="missao">
+        <h2 id="missao">🎯 Minha Missão</h2>
+        <p>
+          Atuo na ponte entre o desenvolvimento técnico e a experiência do
+          usuário real. Como QA especializada em acessibilidade, foco em
+          identificar barreiras antes mesmo do código ser escrito (Shift-left
+          Testing) e em garantir que a automação não esqueça do fator humano.
+        </p>
+      </section>
+
+      <hr />
+
+      <section aria-labelledby="stack">
+        <h2 id="stack">🛠️ Stack Técnica e Processos</h2>
+
+        <article aria-labelledby="qa">
+          <h3 id="qa">🧪 Garantia de Qualidade (QA)</h3>
+          <ul>
+            <li><strong>Automação:</strong> Cypress, Playwright, Jest</li>
+            <li>
+              <strong>Processos:</strong> BDD (Gherkin), Testes de Regressão,
+              Estratégias de Teste de Ponta a Ponta (E2E)
+            </li>
+          </ul>
+        </article>
+
+        <article aria-labelledby="a11y">
+          <h3 id="a11y">♿ Especialidade em Acessibilidade (A11y)</h3>
+          <ul>
+            <li>
+              <strong>Leitores de Tela:</strong> NVDA, VoiceOver e TalkBack
+            </li>
+            <li>
+              <strong>Ferramentas de Análise:</strong> Axe DevTools, WAVE, ARC
+              Toolkit, Inspect.exe (Windows)
+            </li>
+            <li>
+              <strong>Conformidade:</strong> Auditoria baseada em WCAG 2.1 e 2.2
+              (Níveis A, AA e AAA)
+            </li>
+          </ul>
+        </article>
+      </section>
+
+      <hr />
+
+      <section aria-labelledby="biblioteca">
+        <h2 id="biblioteca">📚 Biblioteca Técnica e Conteúdos</h2>
+        <p><em>Explore meus materiais práticos e checklists:</em></p>
+
+        <ul>
+          <li>
+            ✅
+            <strong
+              ><a href="./docs/checklist.md"
+                >Checklist de Acessibilidade para QAs</a
+              >:</strong
+            >
+            Um guia passo a passo para testar componentes comuns
+          </li>
+          <li>
+            📖
+            <strong
+              ><a href="./docs/bugs-a11y.md"
+                >Guia: Como escrever Bugs de Acessibilidade</a
+              >:</strong
+            >
+            Aprenda a reportar falhas de forma que os devs entendam e corrijam
+          </li>
+          <li>
+            📹
+            <strong
+              ><a href="./videos">Vídeos com demonstrações práticas</a>:</strong
+            >
+            Demonstrações de navegação e testes em tempo real
+          </li>
+        </ul>
+      </section>
+
+      <hr />
+
+      <!-- 
+        <section aria-labelledby="palestras">
+            <h2 id="palestras">🎤 Palestras e Workshops</h2>
+            <p><em>Compartilhando conhecimento sobre inclusão digital.</em></p>
+            
+            <ul>
+                <li>🗣️ <strong>Título da Palestra</strong> - Nome do Evento (Ano)</li>
+                <li>🎙️ <strong>Podcast X</strong> - Episódio sobre Acessibilidade em Testes</li>
+            </ul>
+        </section>
+
+        <hr>
+        -->
+
+      <!-- 
+        <section aria-labelledby="projetos">
+            <h2 id="projetos">💻 Projetos em Destaque</h2>
+            
+            <ul>
+                <li>🚀 <strong><a href="./projects/automacao-a11y">Framework de Automação com Cypress-Axe</a>:</strong> Modelo de como integrar testes de acessibilidade no CI/CD</li>
+                <li>📱 <strong><a href="./projects/estudo-financas">Auditoria Completa: App Mobile de Finanças</a>:</strong> Estudo de caso real sobre melhoria de navegação por gestos</li>
+            </ul>
+        </section>
+
+        <hr>
+        -->
+
+      <section aria-labelledby="sobre">
+        <h2 id="sobre">🧠 Sobre Mim</h2>
+        <p>
+          Com mais de 4 anos de jornada na área de Qualidade de Software,
+          especializei-me em tornar o digital um espaço democrático. Minha
+          abordagem une o rigor técnico dos testes automatizados com a
+          sensibilidade necessária para entender as diversas formas de
+          navegação.
+        </p>
+      </section>
+
+      <hr />
+
+      <section aria-labelledby="contato">
+        <h2 id="contato">👋 Vamos Conversar?</h2>
+        <p>
+          Estou sempre aberta a trocar experiências sobre QA, testes de
+          acessibilidade e inclusão digital.
+        </p>
+
+        <ul>
+          <li>
+            💼
+            <strong
+              ><a
+                href="https://linkedin.com/in/isagardenia"
+                target="_blank"
+                rel="noopener noreferrer"
+                >Conecte-se comigo no LinkedIn</a
+              ></strong
+            >
+          </li>
+          <li>
+            📧
+            <strong
+              ><a href="mailto:isagardeniadss@gmail.com"
+                >Envie um E-mail</a
+              ></strong
+            >
+          </li>
+        </ul>
+      </section>
+    </main>
+
+    <hr />
+
+    <footer>
+      <p>
+        <small>&copy; 2026 Isa Gardênia. Todos os direitos reservados.</small>
+      </p>
+    </footer>
+  </body>
 </html>
